# hello-nano-33

./: .gitignore  .gitmodules  README.md
model/: README.md  requirements.txt  sine-model-quantized.cpp  sine-model-quantized.tflite  sine-model.cpp  sine-model.ipynb  sine-model.tflite
test/: CMakeLists.txt  compile_and_run.sh  sine-model-test.cpp
